Fixed a color contrast issue in the documentation

--- a/AccDC Technical Style Guide/_doc_files/css/global.css
+++ b/AccDC Technical Style Guide/_doc_files/css/global.css
@@ -104,7 +104,7 @@ text-align: center;
 div.heading {
 font-size: 1.1em;
 font-style: italic;
-color: #8fbc8f;
+color: #000099;
 }
 
 div.menuLinks {
